k8s/ingress/getrafty-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getrafty
  namespace: hackamonth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: hackamonth-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - academy.hackamonth.io
      secretName: academy-hackamonth-io-tls
  rules:
    - host: academy.hackamonth.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getrafty
                port:
                  number: 80
