k8s/ingress/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: hackamonth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: hackamonth-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - hub.hackamonth.io
      secretName: image-hub-tls
  rules:
    - host: hub.hackamonth.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
