k8s/ingress/site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  namespace: hackamonth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: hackamonth-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - hackamonth.io
        - "*.hackamonth.io"
      secretName: hackamonth-io-tls
  rules:
    - host: book.hackamonth.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 80
